# obs-chapter-marker

./: CMakeLists.txt  README.md
.github/workflows/: build_project.yml
data/locale/: de-DE.ini  en-US.ini  es-ES.ini  fr-FR.ini  it-IT.ini  ja-JP.ini  ko-KR.ini  pt-BR.ini  ru-RU.ini  zh-CN.ini
docs/superpowers/plans/: 2026-06-24-obs-chapter-marker.md
docs/superpowers/specs/: 2026-06-24-marker-export-and-fixes-design.md  2026-06-24-obs-chapter-marker-design.md
src/core/: CMakeLists.txt  ChapterName.cpp  ChapterName.hpp  Export.cpp  Export.hpp  RecordingClock.cpp  RecordingClock.hpp  TimeFormat.cpp  TimeFormat.hpp  Timecode.cpp  Timecode.hpp  Version.cpp  Version.hpp
src/plugin/: CMakeLists.txt  ChapterMarkerDock.cpp  ChapterMarkerDock.hpp  plugin-main.cpp
tests/: CMakeLists.txt  test_chaptername.cpp  test_export.cpp  test_recordingclock.cpp  test_smoke.cpp  test_timecode.cpp  test_timeformat.cpp  test_version.cpp
